14.5/test_ex/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: first-service
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: first
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: second-service
  namespace: test
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: second
  type: ClusterIP
