14.5/test_ex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress   
metadata:
  name: example-ingress  
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
   
spec:   
  rules:
    - host: ps.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: first-service
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: second-service
                port:
                  number: 8080
