14.5/test_ex/polices.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: first-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: first
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: second
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: second-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: second
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: first
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: first
  policyTypes:
  - Ingress
  - Egress
